tests/paczka1/fuzzy1/83778944.err
Error in line 1: w0rA8S7 S650 31,6
Error in line 3: FiLz3 A576 32,0
Error in line 5: w0rA8S7 S629 93,2
Error in line 14: A576 A576 61,2
Error in line 38: A576 A576 79,6
